grass (6.4.0~rc5-2) unstable; urgency=low

  * NOT RELEASED YET
  * Added a grass menu item (Hamish).
  * Added a grass.menu.in template.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Fri, 12 Jun 2009 10:32:40 +0200

grass (6.4.0~rc5-1) unstable; urgency=low

  * New upstream release candidate.
  * Removed gcc44 patch, merged upstream.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Wed, 10 Jun 2009 11:32:09 +0200

grass (6.4.0~rc4-3) unstable; urgency=medium

  * Added a build-conflicts against wx2.6-headers in debian/control.in
    (closes: #526200)
  * [PATCH] gcc44.dpatch: added a missing std header for gcc 4.4.
    (closes: #526204)
  * Added ghostscript among Recommends in debian/control.in.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Tue, 12 May 2009 20:50:40 +0200

grass (6.4.0~rc4-2) unstable; urgency=high

  * Removed superfluous /usr/share/doc/grass<version> empty directory.
  * Added libproj-dev to grass-dev reqs.
    (closes: #527655)
  * Added proj-bin as build-dep for nad2bin at configuration time.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Sun, 10 May 2009 11:16:47 +0200

grass (6.4.0~rc4-1) unstable; urgency=low

  * New upstream release candidate.
  * Added Suggests: python-opengl and python-wxgtk2.8 for the new wx interface.
  * Changed again debian/watch file.
  * Moved to versioned defaults (build-)deps for python.
  * Added Suggests: gpsbabel for v.in.gpsbabel and v.out.gpsbabel.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Wed, 15 Apr 2009 16:25:53 +0200

grass (6.4.0~rc3-3) unstable; urgency=low

  * Fixed debian/watch to see also RC versions. Not perfect but it works.
  * Added xml2 and other r.in.wms related among Suggests in debian/control.
  * Added proj-bin among Suggests in debian/control.
  * Moved build-dep from proj to libproj-dev.
  * Grass-doc section set to doc instead of science.
  * Added a libgdal.so link to the system GDAL shlib, to allow external raster/vector
    support to work.