@@ -6,3 +6,5 @@ usr/lib/grass64/etc
 usr/lib/grass64/fonts
 usr/lib/grass64/scripts
 usr/lib/grass64/lib
+usr/share/icons
+usr/bin/x-grass
